This file contains a summary of changes in released versions.  Please read the
ChangeLog file for a more detailed listing of changes/bug fixes.

1.1.2_alpha7:
    Moved getcols() function from libherdstat as it really doesn't belong in
    the lib and just bloats it with another lib.

1.1.2_alpha6:
    Broke out the convenience library residing in herdstat/ into its own
    package, libherdstat.

    *Much* improved --field implementation.  All of the --dev specific code has
    been factored out, meaning we should be able to use it for pretty much any
    container in any action handler.

1.1.2_alpha5:
    New features:
     - libcurl support - cleaner fetching implementation
     - The --dev option now supports a sub-option, --field which allows
       lookup of developers by a field other than their username.  For example,
       it is now possible to show all developers who were born in 1983 and who
       have the first name Michael with:

	    herdstat -d --field=birthday,1983 --field=name,^Michael

	The criteria, "1983", and "^Michael" respectively are treated as regular
	expressions.

    Bug fixes:
     - Fixed bug where longdesc's (in <pkg> tag of querycache.xml) were being
       assigned instead of appended, causing certain longdescriptions (those
       requiring >1 callback per <longdescription>) to be truncated, and thus
       invalid cache results.

1.1.2_alpha4:
    Lots of behind-the-scenes changes that should decrease the amount of time
    herdstat runs in ALL cases (although in most cases the difference is not
    noticable).  I ditched herdstat's global options template setup in favor
    of the good ol' singleton.  The convenience of the template setup did not
    overweigh the performance consequences.  This means the access functions
    now return references to the data, instead of copies.  Another result of
    this is that herdstat should now use less memory as well, although usually