@@ -1,0 +1,255 @@
+/*
+ * herdstat -- src/action_keywords_handler.cc
+ * $Id: action_versions_handler.cc 664 2005-10-05 11:27:12Z ka0ttic $
+ * Copyright (c) 2005 Aaron Walker <ka0ttic@gentoo.org>
+ *
+ * This file is part of herdstat.
+ *
+ * herdstat is free software; you can redistribute it and/or modify it under the
+ * terms of the GNU General Public License as published by the Free Software
+ * Foundation; either version 2 of the License, or (at your option) any later
+ * version.
+ *
+ * herdstat is distributed in the hope that it will be useful, but WITHOUT ANY
+ * WARRANTY; without even the implied warranty of MERCHANTABILITY or FITNESS
+ * FOR A PARTICULAR PURPOSE.  See the GNU General Public License for more
+ * details.
+ *
+ * You should have received a copy of the GNU General Public License along with
+ * herdstat; if not, write to the Free Software Foundation, Inc., 59 Temple
+ * Place, Suite 325, Boston, MA  02111-1257  USA
+ */
+
+#ifdef HAVE_CONFIG_H
+# include "config.h"
+#endif
+
+#include <algorithm>
+#include <herdstat/util/misc.hh>
+#include <herdstat/portage/exceptions.hh>
+#include <herdstat/portage/find.hh>
+#include <herdstat/portage/misc.hh>
+#include <herdstat/portage/version.hh>
+#include <herdstat/portage/ebuild.hh>
+
+#include "pkgcache.hh"
+#include "overlaydisplay.hh"
+#include "formatter.hh"
+#include "action_keywords_handler.hh"
+
+using namespace herdstat;
+using namespace herdstat::util;
+
+action_keywords_handler_T::~action_keywords_handler_T()
+{
+}
+
+struct FirstLengthLess
+{
+    bool operator()(const std::pair<std::string, std::string>& p1,
+                    const std::pair<std::string, std::string>& p2) const
+    {
+        return (p1.first.length() < p2.first.length());
+    }
+};
+
+int
+action_keywords_handler_T::operator() (opts_type &opts)
+{
+    typedef std::vector<std::pair<std::string, std::string> > spv;
+
+    spv outvec;
+    OverlayDisplay_T od;
+    std::string dir;
+    bool pwd = false;
+
+    if (not options::fields().empty())
+    {
+        std::cerr << "--field doesn't really make much sense with --away."
+            << std::endl;
+        return EXIT_FAILURE;
+    }
+
+    if (options::all())
+    {
+        std::cerr << "Versions action handler does not support the 'all' target."
+            << std::endl;
+        return EXIT_FAILURE;
+    }
+
+    /* we can be called with 0 opts if we are currently
+     * in a package directory */
+    if (opts.empty())
+    {
+        /* are we in a package's directory? */
+        if (not portage::in_pkg_dir())
+        {
+            std::cerr << "You must be in a package directory if you want to run" << std::endl
+                << PACKAGE << " --keywords with no non-option arguments." << std::endl;
+            return EXIT_FAILURE;
+        }
+
+        /* Loop, trimming each directory from the end until depth == 0 */
+        unsigned short depth = 2;
+        std::string leftover;
+        std::string path(util::getcwd());
+
+        while (depth > 0)
+        {
+            std::string::size_type pos = path.rfind('/');
+            if (pos != std::string::npos)
+            {
+                leftover = (leftover.empty() ? path.substr(pos + 1) :
+                                               path.substr(pos + 1)+"/"+leftover);
+                path.erase(pos);
+            }
+            --depth;
+        }
+
+        /* now assign portdir to our path, treating the leftovers as the
+         * category or category/package */
+        pwd = true;
+        dir = path;
+        opts.push_back(leftover);
+        
+        debug_msg("set portdir to '%s'", dir.c_str());
+        debug_msg("added '%s' to opts.", leftover.c_str());
+    }
+    else if (options::regex())
+    {
+        regexp.assign(opts.front());
+        opts.clear();
+        
+        pkgcache_T pkgcache(options::portdir());
+        matches = portage::find_package_regex(regexp, options::overlay(),
+                    &search_timer, pkgcache);
+        
+        if (matches.empty())
+        {
+            std::cerr << "Failed to find any packages matching '"
+                << regexp() << "'." << std::endl;
+            return EXIT_FAILURE;
+        }
+    }
+
+    for (opts_type::iterator i = opts.begin() ; i != opts.end() ; ++i)
+        matches.insert(std::make_pair("", *i));
+
+    std::multimap<std::string, std::string>::iterator m;
+    std::multimap<std::string, std::string>::size_type n = 1;
+    for (m = matches.begin() ; m != matches.end() ; ++m, ++n)
+    {
+        std::string package;
+
+        try
+        {
+            if (pwd)
+                package = portage::find_package_in(dir,
+                            m->second, &search_timer);
+            else if (options::regex() and not m->first.empty())
+            {
+                dir = m->first;
+                package = m->second;
+            }
+            else
+            {
+                std::pair<std::string, std::string> p =
+                    portage::find_package(m->second, options::overlay(),
+                        &search_timer);
+
+                dir = p.first;
+                package = p.second;
+            }
+
+            if (dir != options::portdir() and not pwd)
+                od.insert(dir);
+
+            portage::versions versions(dir + "/" + package);
+
+            /* versions would be empty if the directory exists, but no
+             * ebuilds are there - in this case, use real PORTDIR. */
+            if (versions.empty())
+                versions.assign(options::portdir() + "/" + package);
+            /* still empty, so bail */
+            if (versions.empty())
+                throw portage::NonExistentPkg(package);
+
+            size += versions.size();
+
+            if (not options::quiet())
+            {
+                outvec.push_back(spv::value_type("Package",
+                                 (dir == options::portdir() or pwd) ?
+                                    package : package + od[dir]));
+                outvec.push_back(spv::value_type("", ""));
+            }
+
+            if (not options::count())
+            {
+                portage::versions::iterator v;
+                for (v = versions.begin() ; v != versions.end() ; ++v)
+                {
+                    const portage::version_map &vmap = v->components();
+
+                    std::string s(vmap["PVR"]);
+                    std::string::size_type pos = s.rfind("-r0");
+                    if (pos != std::string::npos)
+                        s.erase(pos);
+
+                    /* get keywords for this version */
+                    portage::ebuild ebuild(v->ebuild());
+                    spv::value_type p(s,
+                            (ebuild["KEYWORDS"].empty() ?
+                                    "Non-existent KEYWORDS variable." :
+                                    ebuild["KEYWORDS"]));
+                    outvec.push_back(p);
+                }
+            }
+
+            if (not options::count() and (n != matches.size()))
+                output.endl();
+        }
+        catch (const portage::AmbiguousPkg &e)
+        {
+            std::cerr << e.name()
+                << " is ambiguous. Possible matches are: "
+                << std::endl << std::endl;
+
+            opts_type::const_iterator i;
+            for (i = e.packages.begin() ; i != e.packages.end() ; ++i)
+            {
+                if (options::quiet() or not options::color())
+                    std::cerr << *i << std::endl;
+                else
+                    std::cerr << color[green] << *i << color[none] << std::endl;
+            }
+
+            if (matches.size() == 1)
+                return EXIT_FAILURE;
+        }
+        catch (const portage::NonExistentPkg &e)
+        {
+            std::cerr << m->second << " doesn't seem to exist." << std::endl;
+
+            if (matches.size() == 1)
+                return EXIT_FAILURE;
+        }
+    }
+
+    /* get max label length */
+    spv::iterator i = std::max_element(outvec.begin(),
+                        outvec.end(), FirstLengthLess());
+
+    output.set_maxlabel(i->first.length()+maxlen+2);
+    output.set_maxdata(options::maxcol() - output.maxlabel());
+    output.set_quiet(options::quiet());
+    output.set_attrs();
+
+    for (i = outvec.begin() ; i != outvec.end() ; ++i)
+        output(i->first, i->second);
+
+    flush();
+    return EXIT_SUCCESS;
+}
+
+/* vim: set tw=80 sw=4 et : */
